# OTLMOW-Template

./: .coverage  .gitignore  README.md  main.py  main_async.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  release.yml  unittest.yml
UnitTests/: .coverage  .gitignore  run_all_tests.py  run_single_testfile_html.py
UnitTests/Subset/: CsvTemplateCreator_test.py  Flitspaal_noAgent3.0.db  Kast_Agent.db  OTL_AllCasesTestClass_no_double_kard.db  SubsetTemplateCreatorTests.py  SubsetTemplateCreator_csv_test.py  SubsetTemplateCreator_excel_test.py  SubsetTemplateCreator_generic_test.py  SubsetTemplateCreator_relations.py  SubsetTemplateCreator_relations_test.py  SubsetTemplateCreator_test.py  SubsetToolTests.py  camera_steun_2.14.db  camera_steun_onderdeel_Bevestiging.csv  camera_steun_onderdeel_Camera.csv  camera_steun_onderdeel_RechteSteun.csv  telecom_app.db  template_file_text.csv  template_file_text.xlsx  template_file_text_onderdeel_AllCasesTestClass.csv  template_file_text_onderdeel_AnotherTestClass.csv  template_file_text_onderdeel_Bevestiging.csv  template_file_text_onderdeel_DeprecatedTestClass.csv  template_file_text_onderdeel_Voedt.csv
UnitTests/htmlcov/: __init___py.html  class_index.html  d_04375c32baa849db_AIMDBStatus_py.html  d_04375c32baa849db_AIMObject_py.html  d_04375c32baa849db_AIMToestand_py.html  d_04375c32baa849db_DirectioneleRelatie_py.html  d_04375c32baa849db_NietDirectioneleRelatie_py.html  d_04375c32baa849db_RelatieObject_py.html  (+123 more)
otlmow_template/: CsvTemplateCreator.py  ExcelTemplateCreator.py  SubsetTemplateCreator.py
(+2 files in other folders)
