[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_template"
version = "0.3"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
  'otlmow-converter >= 0.12',
  'otlmow-modelbuilder >= 0.11',
]

[tool.setuptools.packages.find]
include = ["otlmow_template*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-Template"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-Template/issues"
